<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SPEC_CPU_Bench</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">BenchMark Details</string>
    <string name="button_gzip">Gzip</string>
    <string name="title_activity_display_message">DisplayMessageActivity</string>
    <string name="title_activity_fac">Fac</string>
    <string name="edit_message">Enter value here</string>
    <string name="title_activity_gzip164">Gzip164</string>
    <string name="title_activity_bzip2">Bzip2</string>
    <string name="button_plasma">Plasma</string>
    <string name="title_activity_parser">Parser</string>
    <string name="title_activity_gcc">Gcc</string>
    <string name="title_activity_gzip">Gzip</string>
    <string name="title_activity_mcf">Mcf</string>
    <string name="title_activity_vortex">Vortex</string>
    <string name="title_activity_twolf">Twolf</string>
    <string name="title_activity_vpr">Vpr</string>
    <string name="title_activity_crafty">Crafty</string>
    <string name="title_activity_gap">Gap</string>
    <string name="all">All</string>
    <string name="o">No Optimization</string>
    <string name="o1">O1 Optimization Flag</string>
    <string name="o2">O2 Optimization Flag</string>
    <string name="o3">O3 Optimization Flag</string>
    <string name="o3f">OFast Optimization Flag</string>
    <string name="ref">Ref</string>
    <string name="train">Train</string>
    <string name="test">Test</string>
    <string name="trainresult">train not running</string>
    <string name="testresult">test not running</string>
    <string name="refresult">Ref Not Running</string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="title_activity_check_main">CheckMain</string>
    <string name="check">Select the BenchMarks to run:</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="title_activity_next">Next</string>
    <string name="opti">Select the levels of optimizations to run for the selected benchmarks</string>
    <string name="title_activity_testcase">Testcase</string>
    <string name="reftest">Ref Input Set</string>
    <string name="traintest">Train Input Set</string>
    <string name="testtest">Test Input Set</string>
    <string name="testinp">Select the inputs on which benchmarks should be run</string>
    <string name="title_activity_run">Run</string>
    <string name="bench">BenchMark Detail</string>
    <string name="input">Input Description</string>
    <string name="result">View Results</string>
    <string name="exp">Send Result</string>
    <string name="title_activity_info">Info</string>
    <string name="benchdetail">Click on buttons to view information about BenchMarks</string>

</resources>
