<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/Battleship_Grey"
    tools:context=".Fac" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
				
            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/bench"
                android:textAppearance="?android:attr/textAppearanceLarge" />
			
            
            <WebView
		        android:id="@+id/webView1"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content" />
			
			
            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/input"
                android:textAppearance="?android:attr/textAppearanceLarge" />
			
            <WebView
		        android:id="@+id/webView2"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content" />
            
            

            <Button
                android:id="@+id/button1"
                android:layout_width="wrap_content"
                android:onClick="res"
                android:layout_height="wrap_content"
                android:text="@string/result" />

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="exp"
                android:text="@string/exp" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>
